Fixed spacing issue

--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -40,7 +40,7 @@
 
 .menu__btn {
     position: fixed;
-    top: 31.5px;
+    top: 24px;
     left: 20px;
     width: 26px;
     height: 26px;
@@ -107,5 +107,6 @@
 
 .main {
     background-image: url('../images/minesweeper-background.jpg');
-    background-size: auto;
+    background-size: cover;
+    margin: -8px -8px -8px -8px;
 }
